Company changes in all forms

--- a/StockManager/Views/PrintJobWorkReceived/Edit.cshtml
+++ b/StockManager/Views/PrintJobWorkReceived/Edit.cshtml
@@ -296,7 +296,7 @@
                         ChalanDate: $('#ChalanDate').val(),
                         Description: $('#Description').val(),
                         chalan_number: $('#ChalanNo').val(),
-                        tenant_id: @Model.tenant_id,
+                        CompanyId: @Model.CompanyId,
                         financial_year: @Model.financial_year,
                         created_by: @Model.created_by,
                         PrintJobWorkReceivedDetails: list
