--- a/StockManager/Views/PrinterChalans/Edit.cshtml
+++ b/StockManager/Views/PrinterChalans/Edit.cshtml
@@ -393,7 +393,7 @@
                         dispatched_through: $('#DispatchThrough').val(),
                         bale_numbers: $('#BaleNo').val(),
                         Description: $('#Description').val(),
-                        tenant_id: @Model.tenant_id,
+                        CompanyId: @Model.CompanyId,
                         financial_year: @Model.financial_year,
                         created_by: @Model.created_by,
                         chalan_number: $('#ChalanNo').val(),
