--- a/StockManager/Views/TailorChalanSend/Edit.cshtml
+++ b/StockManager/Views/TailorChalanSend/Edit.cshtml
@@ -296,7 +296,7 @@
                     VendorId: $('#Vendor').val(),
                     ChalanDate: $('#ChalanDate').val(),
                     ChalanNo: $('#ChalanNo').val(),
-                    tenant_id: @Model.tenant_id,
+                    CompanyId: @Model.CompanyId,
                     financial_year: @Model.financial_year,
                     created_by: @Model.created_by,
                     bill_number: $('#BillNo').val(),
