--- a/StockManager/Views/Customers/Create.cshtml
+++ b/StockManager/Views/Customers/Create.cshtml
@@ -28,7 +28,7 @@
             <div class="form-horizontal">
          
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
+                @Html.HiddenFor(x => x.CompanyId, new { Value = Session["CompanyId"] })
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.CustomerName, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
