--- a/StockManager/Views/Customers/Edit.cshtml
+++ b/StockManager/Views/Customers/Edit.cshtml
@@ -29,7 +29,7 @@
              
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.Id)
-                @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
+                @Html.HiddenFor(x => x.CompanyId, new { Value = Session["CompanyId"] })
 
                 
                 <div class="form-group">
