--- a/StockManager/Views/Invoices/Edit.cshtml
+++ b/StockManager/Views/Invoices/Edit.cshtml
@@ -38,7 +38,7 @@
                 <input type="hidden" name="Id" value="@Model.Id" />
                 @Html.HiddenFor(x => x.created_by, new { Value = Session["UserID"] })
                 @Html.HiddenFor(x => x.financial_year, new { Value = Session["FinancialYearID"] })
-                @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
+                @Html.HiddenFor(x => x.CompanyId, new { Value = Session["CompanyId"] })
                 @Html.HiddenFor(x => x.invoice_no)
 
                 <div class="row">
