--- a/StockManager/Views/PurchaseOrders/Edit.cshtml
+++ b/StockManager/Views/PurchaseOrders/Edit.cshtml
@@ -25,7 +25,7 @@
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(x => x.created_by, new { Value = Session["UserID"] })
                 @Html.HiddenFor(x => x.financial_year, new { Value = Session["FinancialYearID"] })
-                @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
+                @Html.HiddenFor(x => x.CompanyId, new { Value = Session["CompanyId"] })
                 <div class="row">
                     <div class="col-md-2">
                         <div class="form-group">
@@ -427,7 +427,7 @@
                         destination: $('#Destination').val(),
                         bale_numbers: $('#BaleNo').val(),
                         Description: $('#Description').val(),
-                        tenant_id: @Model.tenant_id,
+                        CompanyId: @Model.CompanyId,
                         financial_year: @Model.financial_year,
                         created_by: @Model.created_by,
                         GrossAmount: $('#gross').val(),
