--- a/StockManager/Views/TailorChalan/Create.cshtml
+++ b/StockManager/Views/TailorChalan/Create.cshtml
@@ -28,7 +28,7 @@
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(x => x.created_by, new { Value = Session["UserID"] })
                 @Html.HiddenFor(x => x.financial_year, new { Value = Session["FinancialYearID"] })
-                @Html.HiddenFor(x => x.tenant_id, new { Value = Session["TenantID"] })
+                @Html.HiddenFor(x => x.CompanyId, new { Value = Session["CompanyId"] })
 
                 <div class="container-fluid">
                     <div class="row">
