--- a/StockManager/Views/Products/Create.cshtml
+++ b/StockManager/Views/Products/Create.cshtml
@@ -66,7 +66,7 @@
                     @Html.LabelFor(model => model.IsActive, "Active", htmlAttributes: new { @class = "control-label col-md-2"})
                     <div class="col-md-10">
                         <div class="checkbox">
-                            @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "align-middle",  @checked = true } })
+                            @Html.CheckBoxFor(model => model.IsActive, htmlAttributes: new {@checked= true})
                             @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
                         </div>
                     </div>
