--- a/StockManager/Views/Invoices/SinglePrint.cshtml
+++ b/StockManager/Views/Invoices/SinglePrint.cshtml
@@ -29,7 +29,7 @@
                 <div class="form-group">
                     <h4>Vendor</h4>
                     <div>
-                        @Model.Vendor.VendorName
+                        @Model.Customer.CustomerName
                     </div>
                 </div>
             </div>
