--- a/StockManager/Views/Invoices/Create.cshtml
+++ b/StockManager/Views/Invoices/Create.cshtml
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label>Vendor</label>
+                            <label>Customer</label>
                             @Html.DropDownList("customer_id", null, htmlAttributes: new { @class = "form-control selectpicker", data_live_search = "on" })
                             @Html.ValidationMessageFor(model => model.customer_id, "", new { @class = "text-danger" })
                         </div>
