--- a/StockManager/Views/Invoices/Print.cshtml
+++ b/StockManager/Views/Invoices/Print.cshtml
@@ -19,7 +19,7 @@
                     Invoice #
                 </th>
                 <th>
-                    Vendor
+                    Customer
                 </th>
                 <th>
                     Gross
@@ -40,7 +40,7 @@
                         @item.invoice_no
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Vendor.VendorName)
+                        @Html.DisplayFor(modelItem => item.Customer.CustomerName)
                     </td>
                     <td>
                         Rs @Html.DisplayFor(modelItem => item.gross_amount)
