Printer Challan Work

--- a/StockManager/Views/PrintJobWorkReceived/Create.cshtml
+++ b/StockManager/Views/PrintJobWorkReceived/Create.cshtml
@@ -250,7 +250,7 @@
                         GrossCharges: $('#gross').val(),
                         NetCharges: $('#total').val(),
                         Tax: $('#tax').val(),
-                        PurchaseDetails: list
+                        PrintJobWorkReceivedDetails: list
                     }
 
                     //$(this).val('Please wait...');
