--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <!-- BEGIN HEAD -->
 <head>
     <meta charset="utf-8" />
-    <title>Stock Manager</title>
+    <title>GAIMS</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="" name="description" />
@@ -48,8 +48,8 @@
                     <div class="page-footer-inner">
                         &copy; @DateTime.Now.ToString("yyyy") -
                         Developed by
-                        <a href="https://www.itvariables.com" class="crimsonred" target="_BLANK">
-                            <strong>ITvariables</strong>
+                        <a href="http://www.sakshamsoftware.com" class="crimsonred" target="_BLANK">
+                            <strong>Saksham Software</strong>
                         </a>
                     </div>
                     <div class="scroll-to-top">
