--- a/StockManager/Views/Shared/_LayoutModelPopup.cshtml
+++ b/StockManager/Views/Shared/_LayoutModelPopup.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Stock Manager</title>
+    <title>GAIMS</title>
     @Styles.Render("~/Content/css")
     <link href="~/Content/css/bootstrap-datetimepicker.css" rel="stylesheet" media="screen">
 </head>
