--- a/StockManager/Views/PrinterChalans/Details.cshtml
+++ b/StockManager/Views/PrinterChalans/Details.cshtml
@@ -1,108 +1,128 @@
 ﻿@model StockManager.Models.PrinterChalan
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Purchase Order Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-    <h4>Printer Chalan# @Model.Id</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Vendor Name
-        </dt>
+<div class="portlet light">
+    <div class="portlet-title">
+        <div class="caption font-red-sunglo">
+            <i class="icon-speech font-red-sunglo"></i>
+            <span class="caption-subject bold uppercase">Printing Chalans</span>
+        </div>
+        <div class="actions">
+            <a href="@Url.Action("Index")" class="btn btn-circle btn-default">
+                <i class="fa fa-arrow-left"></i> Back
+            </a>
+            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
+            </a>
+        </div>
+    </div>
+    <div class="portlet-body">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <h4>Challan #</h4>
+                        <div>
+                            @Model.chalan_number
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <h4>Vendor</h4>
+                        <div>
+                            @Model.Vendor.VendorName
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <h4>Date</h4>
+                        <div>
+                            @(Model.ChalanDate.ToString("dd-MMM-yyyy"))
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <h4>Dispatch Doc#</h4>
+                        <div>
+                            @Model.dispatch_document_number
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <h4>Dispatch Through</h4>
+                        <div>
+                            @Model.dispatched_through
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <h4>Bale Nos</h4>
+                        <div>
+                            @Model.bale_numbers
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-10">
+                    <div class="form-group">
+                        <h4>Description</h4>
+                        <div>
+                            @Model.Description
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h4>Products</h4>
+                    <table id="products_table" class="table">
+                        <tr>
+                            <th>Product Name</th>
+                            <th>Qty</th>
+                            <th>Fold</th>
+                            <th>Expected Fold</th>
+                            <th>Shrinkage</th>
+                            <th>Net Amount</th>
+                        </tr>
+                        @{
+                            if (Model != null && Model.PrinterChalanDetails != null)
+                            {
+                                foreach (var item in Model.PrinterChalanDetails)
+                                {
+                                    <tr>
+                                        <td>
+                                            <div style='margin-top: 5px;'>@item.Product.ProductName</div>
+                                        </td>
 
-        <dd>
-            @Html.DisplayFor(model => model.Vendor.VendorName)
-        </dd>
-        <dt>
-            Chalan Date
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ChalanDate)
-        </dd>
-       
-            <dt>
-                Document Number
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.dispatch_document_number)
-            </dd>
-            <dt>
-                Dispatch Through
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.dispatched_through)
-            </dd>
-            <dt>
-                Bale Numbers
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.bale_numbers)
-            </dd>
-            <dt>
-                Description
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Description)
-            </dd>
-        
-    </dl>
+                                        <td style='width: 15%' class='qty'>
+                                            @item.Quantity
+                                        </td>
+                                        <td class='rate'>
+                                            @item.Fold
+                                        </td>
+                                        <td class='rate'>
+                                            @item.ExpectedFold
+                                        </td>
+                                        <td style='width: 15%' class='rate'>
+                                            @item.Shrinkage
+                                        </td>
+                                        <td style='width: 15%' class='rate'>
+                                            @item.NetQuantity
+                                        </td>
+                                    </tr>
+                                }
+                            }
+                        }
+                    </table>
+                </div>                
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    Printer Chalan Details
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Product Name
-        </th>
-        <th>
-            Quantity
-        </th>
-        <th>
-            Fold
-        </th>
-        <th>
-            Expected Fold
-        </th>
-        <th>
-            NetQuantity
-        </th>
-        <th>
-            Shrinkage
-        </th>
-    </tr>
-    @{
-        if (Model != null && Model.PrinterChalanDetails != null)
-        {
-            foreach (var item in Model.PrinterChalanDetails)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Product.ProductName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Quantity)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Fold)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ExpectedFold)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.NetQuantity)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Shrinkage)
-                    </td>
-                </tr>
-            }
-        }
-    }
-</table>
-<p>
-    @Html.ActionLink("Close", "Index", "PrinterChalans", new { @class = "btn btn-danger" })
-</p>
