Replace radiobutton to checkbox for UserCompany.IsDefault

--- a/StockManager/Views/Company/AddUser.cshtml
+++ b/StockManager/Views/Company/AddUser.cshtml
@@ -54,11 +54,13 @@
                                 @Html.CheckBoxFor(x => x[i].AddToCompany, new { @checked = item.AddToCompany })
                             </td>
                             <td>
+                                @item.UserId
                                 @Html.HiddenFor(x => x[i].UserId)
                                 @Html.LabelFor(x => x[i].UserName, item.UserName)
                             </td>
                             <td>
-                                @Html.RadioButton("defaultFor", item.UserId, item.IsDefault, new { @class = "radioBtn" })
+                                @item.IsDefault
+                                @Html.CheckBoxFor(x => x[i].IsDefault, new { @checked = item.IsDefault })
                             </td>
                         </tr>
 
