--- a/StockManager/Views/TailorChalan/Index.cshtml
+++ b/StockManager/Views/TailorChalan/Index.cshtml
@@ -8,29 +8,18 @@
     <div class="portlet-title">
         <div class="caption font-red-sunglo">
             <i class="icon-speech font-red-sunglo"></i>
-            <span class="caption-subject bold uppercase">Tailor Chalans</span>
+            <span class="caption-subject bold uppercase">Tailor Challan</span>
         </div>
         <div class="actions">
-
-            @if (ViewBag.Send == 1)
-            {
-                <a href="@Url.Action("Create", new { id = 1 })" class="btn btn-circle btn-default">
-                    <i class="fa fa-plus"></i> New (Given)
-                </a>
-            }
-            else
-            {
-                <a href="@Url.Action("Create", new { id = 0 })" class="btn btn-circle btn-default">
-                    <i class="fa fa-plus"></i> New (Recieve)
-                </a>
-            }
-
-            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
-
+            <a href="@Url.Action("Create")" class="btn btn-circle btn-default">
+                <i class="fa fa-plus"></i> New
+            </a>
+            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
+            </a>
         </div>
     </div>
     <div class="portlet-body">
-        <table class="jTable table table-bordered table-hover">
+        <table class="jTable table table-striped table-advance table-hover">
             <thead>
                 <tr>
                     <th>
