--- a/StockManager/Views/Shared/dashboard/sidebar.cshtml
+++ b/StockManager/Views/Shared/dashboard/sidebar.cshtml
@@ -111,8 +111,8 @@
                 </a>
                 <ul class="sub-menu">
                     <li class="nav-item  ">
-                        <a href="#" class="nav-link ">
-                            <span class="title">Example 1</span>
+                        <a href="@Url.Action("ProductWiseStock", "Report")" class="nav-link ">
+                            <span class="title">Stock Summary Report</span>
                         </a>
                     </li>
                     <li class="nav-item  ">
