--- a/StockManager/Views/Products/Index.cshtml
+++ b/StockManager/Views/Products/Index.cshtml
@@ -54,7 +54,7 @@
                             }
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.MeasuringUnit)
+                            @Html.DisplayFor(modelItem => item.MeasuringUnit.Name)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Description)
