--- a/StockManager/Views/TailorChalan/Details.cshtml
+++ b/StockManager/Views/TailorChalan/Details.cshtml
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="portlet-body">
-        <h4>Printer Chalan# @Model.Id</h4>
+        <h4>Tailor Chalan# @Model.Id</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
