Top nav search and action buttons

--- a/StockManager/Views/Shared/dashboard/topnav.cshtml
+++ b/StockManager/Views/Shared/dashboard/topnav.cshtml
@@ -15,9 +15,57 @@
         <!-- BEGIN RESPONSIVE MENU TOGGLER -->
         <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse"> </a>
         <!-- END RESPONSIVE MENU TOGGLER -->
-        
+        <div class="page-actions">
+            <div class="btn-group">
+                <button type="button" class="btn btn-circle btn-outline red dropdown-toggle" data-toggle="dropdown">
+                    <i class="fa fa-plus"></i>&nbsp;
+                    <span class="hidden-sm hidden-xs">New&nbsp;</span>&nbsp;
+                    <i class="fa fa-angle-down"></i>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li>
+                        <a href="javascript:;">
+                            <i class="icon-docs"></i> New Post
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <i class="icon-tag"></i> New Comment
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <i class="icon-share"></i> Share
+                        </a>
+                    </li>
+                    <li class="divider"> </li>
+                    <li>
+                        <a href="javascript:;">
+                            <i class="icon-flag"></i> Comments
+                            <span class="badge badge-success">4</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <i class="icon-users"></i> Feedbacks
+                            <span class="badge badge-danger">2</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <!-- BEGIN PAGE TOP -->
         <div class="page-top">
+            <form class="search-form search-form-expanded" action="page_general_search_3.html" method="GET">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search..." name="query">
+                    <span class="input-group-btn">
+                        <a href="javascript:;" class="btn submit">
+                            <i class="icon-magnifier"></i>
+                        </a>
+                    </span>
+                </div>
+            </form>
             <!-- BEGIN TOP NAVIGATION MENU -->
             <div class="top-menu">
                 <ul class="nav navbar-nav pull-right">
